--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -145,6 +145,12 @@
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked">
         </RadioButton>
+        <RadioButton
+            android:id="@+id/enable_charger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onRadioButtonClicked">
+        </RadioButton>
     </RadioGroup>
 
     <Switch
